--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-Hello world
-This is my first text in html.
-Third line
-Fourth line
-Fifth line
+<!DOCTYPE html>
+<html lang="en">
+ 
+    <head>
+      <title>Hello, world!</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="stylesheet" href="style.css">
+    </head>
+ 
+    <body>
+      <h1>Hello World</h1>
+    </body>
+    
+</html>
