--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
  
     <body>
       <h1>Hello World</h1>
+      <h2>Subtitulo</h2>
+        <h3>Titular de articulo</h3>
+            <h4>Resaltado</h4>
+            <h5>Link</h5>
+            <h6>titulo6</h6>
+
+
       <title>
           <nav>
               <ul><li>About me</li>
