--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="style.css">
     </head>
+
  <!-- Website title -->
     <body>
       <p>Orange</p>
 <!-- Menu -->
       <nav>
           <ul>
-              <li>Benefit</li>
-              <li>Pricing</li>
-              <li>Testimonials</li>
+              <li><a href="https://www.w3schools.com">Benefit</a></li>
+              <li><a href="https://www.w3schools.com">Pricing</a></li>
+              <li><a href="https://www.w3schools.com">Testimonials</a></li>
           </ul>
       </nav>
 
@@ -24,7 +25,7 @@
     <h1>Subscribe today and get notified first when we launch Orange app!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
     <input type="email"> Your email address </input> 
-    <button type="button">Subscribe now</button>
+    <button type="button"><a href="https://www.w3schools.com">Subscribe now</a></button>
     <img src="_images/iPhone mockup header.png" alt="iPhone mock up with orange" width="530">
 </section>
 
@@ -47,7 +48,7 @@
     <h2>It tastes like Premium.</h2>
     <h3>Better than an apple.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <button type="button">Subscribe now</button>
+    <button type="button"><a href="https://www.w3schools.com">Subscribe now</a></button>
 </section>
 
 <!-- Customer opinion -->
@@ -66,13 +67,13 @@
     <h2>Subscribe today and get notified first!</h2>
     <h3>Product launch in: 12 days</h3>
     <input type="email"> Your email address </input> 
-    <button type="button">Subscribe now</button>
+    <button type="button"><a href="https://www.w3schools.com">Subscribe now</a></button>
 </section>
 
 <!-- Footer -->
 <footer>
     <h4>© 2019 Orange All Right Reserved</h4>
-    <p>Benefit / Pricing / Testimonials</p>
+    <p><a href="https://www.w3schools.com">Benefit</a> / <a href="https://www.w3schools.com">Pricing</a> / <a href="https://www.w3schools.com">Testimonials</a></p>
 </footer>
     </body>
     
