--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <title>Orange</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="stylesheet" href="style.css">
+      <meta name="description" content="Esta pagina esta dedicata a la marca orange">
+      <meta name="keywords" content="diseñador, ux, ui, uxui, interaction, interface"> 
+      <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="styles/styles.css">
     </head>
 
  <!-- Website title -->
@@ -26,25 +29,25 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
     <input type="email"> Your email address </input> 
     <button type="button"><a href="https://www.w3schools.com">Subscribe now</a></button>
-    <img src="_images/iPhone mockup header.png" alt="iPhone mock up with orange" width="530">
+    <img src="img/iPhone-mockup-header.png" alt="iPhone mock up with orange" width="530">
 </section>
 
 <!-- Services -->
 <section>
-    <img src="_images/Illustration 1.png" alt="percentage sketch" width="190">
+    <img src="img/illustration-percentage.png" alt="percentage sketch" width="190">
      <h4>Title 1</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    <img src="_images/Illustration 2.png" alt="doctors sketch" width="190">
+    <img src="img/illustration-heart.png" alt="doctors sketch" width="190">
     <h4>Title 2</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    <img src="_images/Illustration 3.png" alt="happiness sketch" width="190">
+    <img src="img/illustration-happy.png" alt="happiness sketch" width="190">
      <h4>Title 3</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 </section>
 
 <!-- Explanation subscription -->
 <section>
-    <img src="_images/orange_tree.png" alt="orange tree with fruits" width="400">
+    <img src="img/Left column.png" alt="orange tree with fruits" width="400">
     <h2>It tastes like Premium.</h2>
     <h3>Better than an apple.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -53,7 +56,7 @@
 
 <!-- Customer opinion -->
 <section>
-    <img src="_images/quote.png" alt="symbol of quote" width="380">
+    <img src="img/quote.png" alt="symbol of quote" width="380">
     <h2>What Our Customers Say</h2>
     <p>“I love oranges!!
         tasty mmmmm…..”</p>
